elephant-shed (1.1.2) UNRELEASED; urgency=medium

  * 

 -- Adrian Vondendriesch <adrian.vondendriesch@credativ.de>  Thu, 25 Jan 2018 17:45:40 +0100

elephant-shed (1.1.1) unstable; urgency=medium

  [ Adrian Vondendriesch ]
  * Split prometheus exporters into own packages.

  [ Alexander Sosna ]
  * Change docs build process to sphinx
  * grafana: Fix "Dead Tuples"
  * grafana: Fix "Locks"
  * grafana: Change limits for "Next Freeze"
  * grafana: Add tool tips

 -- Adrian Vondendriesch <adrian.vondendriesch@credativ.de>  Thu, 25 Jan 2018 17:00:25 +0100

elephant-shed (1.0) unstable; urgency=medium

  [ Christoph Berg ]
  * cockpit: Add cockpit-packagekit to Recommends.

  [ Adrian Vondendriesch ]
  * prometheus: Add sudo to dependencies.
  * portal: replace the way we show backups.
  * portal: rework UI, introduce bootstrap.

  [ Alexander Sosna ]
  * grafana: Fix for queries for Prometheus 2.0
  * portal: Use new Icons

  [ Caique de Castro ]
  * portal: Fix link to Grafana

 -- Adrian Vondendriesch <adrian.vondendriesch@credativ.de>  Mon, 16 Oct 2017 18:54:10 +0200

elephant-shed (0.9) unstable; urgency=medium

  * Team upload.
  * Initial release.

 -- Adrian Vondendriesch <adrian.vondendriesch@credativ.de>  Mon, 16 Oct 2017 17:38:41 +0200