@@ -1,6 +1,9 @@
 elephant-shed (1.1.2) UNRELEASED; urgency=medium
 
-  * 
+  * Upgrade to grafana 5 and prometheus 2. (Existing monitoring data is not
+    migrated.)
+  * prometheus: Use 'localhost' as job_name to bundle this machine's node and
+    sql exporter results.
 
  -- Adrian Vondendriesch <adrian.vondendriesch@credativ.de>  Thu, 25 Jan 2018 17:45:40 +0100
 
